fix: scrolling now visible

--- a/src/components/chatapp/ChatApp.css
+++ b/src/components/chatapp/ChatApp.css
@@ -21,8 +21,8 @@
     background-color: #f6f6f6;
     overflow-y:auto;
     overflow-x: hidden;
-    width: 1000px;
-    height: 650px;
+    width: 900px;
+    height: 525px;
 }
 
 
